# pulse64

./: CMakeLists.txt  compile_commands.json  isa.yaml  pulse-manual.md  run.sh  test
include/: alu.h  bus.h  isa_gen.h  loader.h  operand.h  pangea.h  pulse.h  ram.h  register.h  svec.h
lib/logger/: README.md
script/: generate_alu_test_files.py  generate_isa_files.py
src/: alu.c  bus.c  isa_gen.c  main.c  pangea.c  pulse.c  ram.c  registers.c
tests/: test_alu.yaml  test_alu_gen.c
